# the-real-contribution-graph

./: .gitignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json  turbo.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  deploy.yml
apps/api/: Cargo.toml  package.json
apps/api/src/: lib.rs  main.rs
apps/web/: astro.config.mjs  package.json
apps/web/src/components/: contributions-app.tsx
apps/web/src/lib/: cache.ts  contributions-layout.ts  contributions-svg.ts  contributions.ts  limiter.ts  og-font.ts  rate-limit.ts  stars.ts  themes.ts
apps/web/src/pages/: [username].svg.ts  index.astro  og.png.ts
apps/web/src/pages/api/contributions/: [username].ts
apps/web/src/styles/: global.css
infra/: outputs.tf  providers.tf  state.tf  terraform.tfvars.example  variables.tf
