[workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/web"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.92"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"
needless_collect = "deny"
large_enum_variant = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
